--- a/back-nim/package.json
+++ b/back-nim/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.jsx",
   "scripts": {
-    "start":"node app.js"
+    "start":"node app.js",
+    "start-dev":"node-dev app.js"
   },
   "keywords": [],
   "author": "",
